..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
A.F....... [ZBX-4316] improved message for web step status code validation error, added validation in api (Vedmak)
..F....... [ZBX-5445] fixed hint not removed in dashboard when widget content is refreshed (Vedmak)
..F....... [ZBX-5490] fixed textarea maxlength validation (Eduard)
A......... [ZBX-5461] fixed error when create trigger prototype on PHP 5.1 (Vedmak)
..F....... [ZBX-5487] fixed sorting in dashboard system status and host status widget popups (Vedmak)
..F....... [ZBX-5480] fixed icon default state for host elements in map (Eduard)
....I..... [ZBX-5479] removed inode item prototype from OS Windows template (Sasha)
........S. [ZBX-5235] fixed update of a "lifetime" field if link a template to a host (Sasha)
..F....... [ZBX-4025] fixed duplicate http step names cheking (Eduard)
.......PS. [ZBX-5240] fixed unwanted server shutdown if housekeeper cannot access MySQL database (Andris)
..F....... [ZBX-4482] fixed guest user theme not applied (Toms)
..F....... [ZBX-5441] fixed audit logging when adding IT service causing notice message and wrong audit log (Toms)
..F....... [ZBX-5204] changed the color of inactive tabs to blue in the classic theme (Pavels)
..F....... [ZBX-5393] fixed translation escaping in HTML areas causing some languages to display incorrect text (Toms)
..F....... [ZBX-5393] fixed broken target selection in action form (Toms)
A.F....... [ZBX-5489] removed API methods CAlert->create(), CAlert->delete(), CEvent->create(), CEvent->delete(), CEvent->deleteByTriggerIDs() (Eduard)
.......PS. [ZBX-5483] fixed response to requests of the sender with missing fields (Sasha)
..F....... [ZBX-5429] fixed hintbox displaying when menu is shown (Eduard)